--- a/FriendZone/FriendZoneWeb/Views/Shared/Error.cshtml
+++ b/FriendZone/FriendZoneWeb/Views/Shared/Error.cshtml
@@ -1,7 +1,8 @@
-﻿<!DOCTYPE html>
+﻿@model System.Web.Mvc.HandleErrorInfo
+<!DOCTYPE html>
 <html>
 <head>
-<meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     <meta name="viewport" content="width=device-width" />
     <title>Erreur</title>
 </head>
@@ -9,6 +10,7 @@
     <hgroup>
         <h1>Erreur.</h1>
         <h2>Une erreur s'est produite lors du traitement de votre demande.</h2>
+        <h2>@Model.Exception.Message</h2>
     </hgroup>
 </body>
 </html>
