--- a/FriendZone/FriendZoneWeb/Content/Site.css
+++ b/FriendZone/FriendZoneWeb/Content/Site.css
@@ -1,83 +1,24 @@
-﻿
-
-
-ul {
-    padding: 0;
-    list-style: none;
-}
-.twitter {
-    display: flex;
+﻿body {
+    padding-top: 50px;
+    padding-bottom: 20px;
 }
 
-.twitterBird {
-    margin-left: auto;
-    margin-right: auto
+/* Set padding to keep content from hitting the edges */
+.body-content {
+    padding-left: 15px;
+    padding-right: 15px;
 }
 
-.twitter {
-    height: 46px;
-    align-items: center;
-    padding: 0 10px;
-    border: 1px solid rgba(238,238,238,1);
-    border-radius: 5px;
-    color: rgba(117,117,117,1);
-    box-shadow: 5px 10px 20px -20px rgba(85,172,238,1);
+/* Override the default bootstrap behavior where horizontal description lists 
+   will truncate terms that are too long to fit in the left column 
+*/
+.dl-horizontal dt {
+    white-space: normal;
 }
 
-    .twitter li {
-        cursor: pointer;
-    }
-
-        .twitter li:hover {
-            color: rgba(85,172,238,1);
-        }
-
-.twitterBird {
-    color: rgba(85,172,238,1);
-    font-size: 1.3em;
-}
-
-
-.twitter li:not(:last-child):not(.twitterBird) {
-    margin-right: 10px;
-}
-
-.twitter li i:not(.fa-twitter):not(.fa-search):not(.fa-user-circle-o) {
-    margin-right: 3px;
-}
-
-.twitter li > button {
-    font-size: 0.8em;
-    border: 0;
-    background: rgba(85,172,238,1);
-    color: #fff;
-    border-radius: 100px;
-}
-
-.facebook {
-    display: flex
-}
-.facebookSearch {
-    margin-right: auto;
-}
-
-.facebook {
-    height: 46px;
-    align-items: center;
-    padding: 0 10px;
-    border: 1px solid rgba(238,238,238,1);
-    border-radius: 5px;
-    background: rgba(59,89,153,1);
-    color: #fff;
-    font-size: 0.9em;
-    box-shadow: 5px 10px 20px -20px rgba(59,89,153,1)
-}
-
-.facebookBrand i {
-    font-size: 2em;
-    margin-right: 2px;
-}
-
-.facebook li:not(:last-child):not(:first-child):not(.facebookSearch) {
-    margin-right: 10px;
+/* Set width on the form input elements since they're 100% wide by default */
+input,
+select,
+textarea {
+    max-width: 280px;
 }
