--- a/FriendZone/FriendZoneWeb/Views/Auth/Login.cshtml
+++ b/FriendZone/FriendZoneWeb/Views/Auth/Login.cshtml
@@ -8,7 +8,7 @@
                 <button>create</button>
                 <p class="message">Already registered? <a href="#">Sign In</a></p>
             </form>
-            <form class="login-form" action="/login" method="post" >
+            <form class="login-form" controller="auth" action="login" method="post" >
                 <input type="text" placeholder="username" />
                 <input type="password" placeholder="password" />
                 <button>login</button>
