finish Login for admin Panel

--- a/FriendZone/FriendZoneWeb/Views/Auth/Login.cshtml
+++ b/FriendZone/FriendZoneWeb/Views/Auth/Login.cshtml
@@ -1,5 +1,6 @@
 ﻿
-    <div class="login-page">
+@model string    
+<div class="login-page">
         <div class="form">
             <form class="register-form">
                 <input type="text" placeholder="name" />
@@ -9,8 +10,9 @@
                 <p class="message">Already registered? <a href="#">Sign In</a></p>
             </form>
             <form class="login-form" controller="auth" action="login" method="post" >
-                <input type="text" placeholder="username" />
-                <input type="password" placeholder="password" />
+                <input type="text" placeholder="username" name="username"/>
+                <input type="password" placeholder="password" name="password" />
+                <p>@Model</p>
                 <button>login</button>
             </form>
         </div>
