--- a/FriendZone/FriendZoneWeb/Views/Post/Index.cshtml
+++ b/FriendZone/FriendZoneWeb/Views/Post/Index.cshtml
@@ -49,7 +49,7 @@
                 @Html.DisplayNameFor(model => model.PostUrl)
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.Caption)
+                @Html.DisplayNameFor(model => model.Title)
             </th>
             <th>
                 Actions
@@ -66,7 +66,7 @@
                 @Html.DisplayFor(modelItem => item.PostUrl)
             </td>
             <td>
-                @Html.DisplayFor(modelItem => item.Caption)
+                @Html.DisplayFor(modelItem => item.Title)
             </td>
             <td class="" style="width:100px">
                 <button class=" btn btn-danger" style="margin-right: 10px; "><i class="fa fa-edit fa-lg"></i></button>
