--- a/FriendZone/FriendZoneWeb/Views/Post/Index.cshtml
+++ b/FriendZone/FriendZoneWeb/Views/Post/Index.cshtml
@@ -73,7 +73,7 @@
        
 
         <td>
-            <img src="@item.Image" width="100" height="100" />
+            <img src="@img64Url" width="100" height="100" />
         </td>
     }
     else
@@ -98,7 +98,7 @@
         @Html.DisplayFor(modelItem => item.Title)
     </td>
     <td class="" style="width:100px">
-        <button class=" btn btn-danger" style="margin-right: 10px; "><i class="fa fa-edit fa-lg"></i></button>
+        <a class=" btn btn-danger"  post-id="@item.PostId" href="post/edit/@item.PostId" id="editPost" style="margin-right: 10px; "><i class="fa fa-edit fa-lg"></i></a>
         <button class="btn btn-danger delete-button pull-right" post-id="@item.PostId" style=""><i class="fa fa-trash fa-lg" style=""></i></button>
     </td>
 </tr>
