--- a/FriendZone/FriendZoneWeb/Views/Shared/_Layout.cshtml
+++ b/FriendZone/FriendZoneWeb/Views/Shared/_Layout.cshtml
@@ -25,6 +25,7 @@
                     <li>@Html.ActionLink("Accueil", "Index", "Home")</li>
                     <li>@Html.ActionLink("Create admin", "registerAdmin", "Dashboard")</li>
                     <li>@Html.ActionLink("Post Manager", "index", "Post")</li>
+                    <li>@Html.ActionLink("User Manager", "index", "User")</li>
                 </ul>
             </div>
         </div>
