--- a/FriendZone/FriendZoneWeb/Views/Shared/_Layout.cshtml
+++ b/FriendZone/FriendZoneWeb/Views/Shared/_Layout.cshtml
@@ -27,6 +27,9 @@
                     <li>@Html.ActionLink("Post Manager", "index", "Post")</li>
                     <li>@Html.ActionLink("User Manager", "index", "User")</li>
                 </ul>
+                <ul class="nav navbar-nav pull-right">
+                    <li>@Html.ActionLink("Logout", "logout", "auth")</li>
+                </ul>
             </div>
         </div>
     </div>
